--- a/web-proof-machine/package.json
+++ b/web-proof-machine/package.json
@@ -11,12 +11,11 @@
     "@types/node": "^16.18.90",
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
+    "fs": "^0.0.1-security",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-scripts": "5.0.1",
-    "react-scrollable-list": "^1.3.1",
-    "react-zoom-pan-pinch": "^3.4.3",
     "reactflow": "^11.10.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
