--- a/web-proof-machine/package.json
+++ b/web-proof-machine/package.json
@@ -1,48 +1,48 @@
 {
-  "name": "web-proof-machine",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@dnd-kit/core": "^6.1.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.90",
-    "@types/react": "^18.2.67",
-    "@types/react-dom": "^18.2.22",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-draggable": "^4.4.6",
-    "react-scripts": "5.0.1",
-    "react-scrollable-list": "^1.3.1",
-    "react-zoom-pan-pinch": "^3.4.3",
-    "reactflow": "^11.10.4",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "web-proof-machine",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@dnd-kit/core": "^6.1.0",
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.5.2",
+        "@types/node": "^16.18.90",
+        "@types/react": "^18.2.67",
+        "@types/react-dom": "^18.2.22",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-draggable": "^4.4.6",
+        "react-scripts": "5.0.1",
+        "react-scrollable-list": "^1.3.1",
+        "react-zoom-pan-pinch": "^3.4.3",
+        "reactflow": "^11.10.4",
+        "typescript": "^4.9.5",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --watchAll",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
