--- a/web-proof-machine/package.json
+++ b/web-proof-machine/package.json
@@ -11,6 +11,7 @@
         "@types/node": "^16.18.90",
         "@types/react": "^18.2.67",
         "@types/react-dom": "^18.2.22",
+        "@vercel/postgres": "^0.8.0",
         "chevrotain": "^11.0.3",
         "next": "^14.2.2",
         "react": "^18.2.0",
