UI: Level popup and navigating to next game

--- a/web-proof-machine/study_setup/pilot1-config.json
+++ b/web-proof-machine/study_setup/pilot1-config.json
@@ -1,8 +1,8 @@
 {
     "problems": {
         "Tutorial": [
-            "tim_easyproblem1",
-            "tim-tim_easyproblem2",
+            "0trivial",
+            "tim_easyproblem2",
             "problem5",
             "problem5",
             "problem5"
