Feat: Level completion cookie and navigating to next level

--- a/web-proof-machine/study_setup/pilot1-config.json
+++ b/web-proof-machine/study_setup/pilot1-config.json
@@ -2,7 +2,7 @@
     "problems": {
         "Tutorial": [
             "0trivial",
-            "tim_easyproblem2",
+            "problem2",
             "problem5",
             "problem5",
             "problem5"
@@ -29,7 +29,7 @@
             "problem5",
             "problem5",
             "problem5",
-            "problem5"
+            "jacob_easyproblem1"
         ]
     }
 }
