--- a/web-proof-machine/study_setup/pilot1-config.json
+++ b/web-proof-machine/study_setup/pilot1-config.json
@@ -5,7 +5,7 @@
             "jacob_easyproblem2",
             "jacob_easyproblem3",
             "jacob_easyproblem4",
-            "tim_easyproblem1".
+            "tim_easyproblem1",
             "tim_easyproblem7"
         ],
         "Beginner": [
