First draft of GUI export

--- a/web-proof-machine/GadgetGameSolver/lake-manifest.json
+++ b/web-proof-machine/GadgetGameSolver/lake-manifest.json
@@ -1,5 +1,23 @@
 {"version": 7,
  "packagesDir": ".lake/packages",
- "packages": [],
+ "packages":
+ [{"url": "https://github.com/leanprover-community/batteries",
+   "type": "git",
+   "subDir": null,
+   "rev": "56d2e4ee226603eb6b90b05f6b944bde42672cd5",
+   "name": "batteries",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": true,
+   "configFile": "lakefile.lean"},
+  {"url": "https://github.com/leanprover-community/ProofWidgets4",
+   "type": "git",
+   "subDir": null,
+   "rev": "e6b6247c61280c77ade6bbf0bc3c66a44fe2e0c5",
+   "name": "proofwidgets",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "v0.0.36",
+   "inherited": false,
+   "configFile": "lakefile.lean"}],
  "name": "GadgetGameSolver",
  "lakeDir": ".lake"}
