--- a/web-proof-machine/package.json
+++ b/web-proof-machine/package.json
@@ -4,6 +4,11 @@
     "private": true,
     "dependencies": {
         "@radix-ui/react-icons": "^1.3.0",
+        "@rollup/plugin-commonjs": "^26.0.1",
+        "@rollup/plugin-node-resolve": "^15.2.3",
+        "@rollup/plugin-replace": "^5.0.7",
+        "@rollup/plugin-terser": "^0.4.4",
+        "@rollup/plugin-typescript": "^11.1.6",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -16,6 +21,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "reactflow": "^11.10.4",
+        "rollup": "^4.18.0",
         "tailwind-merge": "^2.3.0",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
@@ -24,7 +30,11 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "watch": "rollup --environment NODE_ENV:production --config --watch",
+        "watch-dev": "rollup --config --watch",
+        "export": "rollup --environment NODE_ENV:production --config",
+        "build-dev": "rollup --config"
     },
     "eslintConfig": {
         "extends": "next/core-web-vitals"
