--- a/web-proof-machine/tsconfig.json
+++ b/web-proof-machine/tsconfig.json
@@ -19,7 +19,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react",
     "baseUrl": ".",
     "incremental": true,
     "plugins": [
