--- a/web-proof-machine/package.json
+++ b/web-proof-machine/package.json
@@ -12,11 +12,11 @@
         "@types/react": "^18.2.67",
         "@types/react-dom": "^18.2.22",
         "@vercel/postgres": "^0.8.0",
+        "@xyflow/react": "^12.0.3",
         "chevrotain": "^11.0.3",
         "next": "^14.2.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "reactflow": "^11.10.4",
         "tailwind-merge": "^2.3.0",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
