--- a/web-proof-machine/package.json
+++ b/web-proof-machine/package.json
@@ -2,8 +2,13 @@
     "name": "web-proof-machine",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "dependencies": {
         "@radix-ui/react-icons": "^1.3.0",
+        "@rollup/plugin-commonjs": "^26.0.1",
+        "@rollup/plugin-node-resolve": "^15.2.3",
+        "@rollup/plugin-replace": "^5.0.7",
+        "@rollup/plugin-terser": "^0.4.4",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -25,7 +30,8 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "export": "rollup --environment NODE_ENV:production --config"
     },
     "eslintConfig": {
         "extends": "next/core-web-vitals"
@@ -43,9 +49,13 @@
         ]
     },
     "devDependencies": {
+        "@rollup/plugin-typescript": "^11.1.6",
         "autoprefixer": "^10.4.19",
         "eslint": "^9.1.1",
         "postcss": "^8.4.38",
+        "rollup-plugin-commonjs": "^10.1.0",
+        "rollup-plugin-node-resolve": "^5.2.0",
+        "rollup-plugin-postcss": "^4.0.2",
         "tailwindcss": "^3.4.3"
     }
 }
