--- a/web-proof-machine/package.json
+++ b/web-proof-machine/package.json
@@ -5,7 +5,6 @@
     "dependencies": {
         "@radix-ui/react-icons": "^1.3.0",
         "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.2",
         "@types/node": "^16.18.90",
@@ -25,7 +24,8 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "test": "vitest"
     },
     "eslintConfig": {
         "extends": "next/core-web-vitals"
@@ -43,9 +43,14 @@
         ]
     },
     "devDependencies": {
+        "@testing-library/dom": "^10.4.0",
+        "@testing-library/react": "^16.0.1",
+        "@vitejs/plugin-react": "^4.3.2",
         "autoprefixer": "^10.4.19",
         "eslint": "^9.1.1",
+        "jsdom": "^25.0.1",
         "postcss": "^8.4.38",
-        "tailwindcss": "^3.4.3"
+        "tailwindcss": "^3.4.3",
+        "vitest": "^2.1.2"
     }
 }
