--- a/web-proof-machine/GadgetGameSolver/lake-manifest.json
+++ b/web-proof-machine/GadgetGameSolver/lake-manifest.json
@@ -14,7 +14,7 @@
   {"url": "https://github.com/leanprover-community/ProofWidgets4",
    "type": "git",
    "subDir": null,
-   "scope": "",
+   "scope": "leanprover-community",
    "rev": "eb08eee94098fe530ccd6d8751a86fe405473d4c",
    "name": "proofwidgets",
    "manifestFile": "lake-manifest.json",
