--- a/web-proof-machine/package.json
+++ b/web-proof-machine/package.json
@@ -17,7 +17,8 @@
         "react-dom": "^18.2.0",
         "tailwind-merge": "^2.3.0",
         "typescript": "^4.9.5",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "zustand": "^5.0.0"
     },
     "scripts": {
         "dev": "next dev",
