Test: Fix vitest path resolving configuration

--- a/web-proof-machine/tsconfig.json
+++ b/web-proof-machine/tsconfig.json
@@ -33,7 +33,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "./dist/types/**/*.ts",
-    "build/types/**/*.ts"
+    "build/types/**/*.ts",
+    "vitest.config.mts"
   ],
   "exclude": [
     "node_modules"
