--- a/web-proof-machine/package.json
+++ b/web-proof-machine/package.json
@@ -9,6 +9,7 @@
         "@types/jest": "^27.5.2",
         "@types/react": "^18.2.67",
         "@types/react-dom": "^18.2.22",
+        "@vercel/analytics": "^1.4.0",
         "@vercel/postgres": "^0.9.0",
         "@xyflow/react": "^12.0.3",
         "chevrotain": "^11.0.3",
