--- a/web-proof-machine/package.json
+++ b/web-proof-machine/package.json
@@ -54,6 +54,7 @@
         "jsdom": "^25.0.1",
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.3",
+        "tsc-alias": "^1.8.10",
         "vitest": "^2.1.2"
     }
 }
