--- a/web-proof-machine/GadgetGameSolver/lake-manifest.json
+++ b/web-proof-machine/GadgetGameSolver/lake-manifest.json
@@ -4,21 +4,21 @@
  [{"url": "https://github.com/leanprover-community/batteries",
    "type": "git",
    "subDir": null,
-   "scope": "",
-   "rev": "fa571ea02a804b52a59e58012b1e21fe4f0514f2",
+   "scope": "leanprover-community",
+   "rev": "31a10a332858d6981dbcf55d54ee51680dd75f18",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
    "inherited": true,
-   "configFile": "lakefile.lean"},
+   "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/ProofWidgets4",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "eb08eee94098fe530ccd6d8751a86fe405473d4c",
+   "rev": "23268f52d3505955de3c26a42032702c25cfcbf8",
    "name": "proofwidgets",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v0.0.42",
+   "inputRev": "v0.0.44",
    "inherited": false,
    "configFile": "lakefile.lean"}],
  "name": "GadgetGameSolver",
